git/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: git-service
spec:
  serviceName: git-service
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: git-service
        image: gitea/gitea:1.9.2
        command:
        - gitea
        args:
        - web
        - "--config"
        - /etc/gitea/app.ini
        ports:
        - name: http-gui
          containerPort: 3000
        - name: ssh-git
          containerPort: 3001
        volumeMounts:
        - name: gitea-pv
          mountPath: /data
        - name: config-volume
          mountPath: /etc/gitea
        livenessProbe:
          httpGet:
            path: /
            port: http-gui
            scheme: HTTP
          initialDelaySeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: http-gui
            scheme: HTTP
          initialDelaySeconds: 15
      volumes:
        - name: config-volume
          configMap:
            name: app-ini
  volumeClaimTemplates:
  - metadata:
      name: gitea-pv
    spec:
      accessModes:
        - "ReadWriteOnce"
      resources:
        requests:
          storage: "1Gi"
      storageClassName: nfs-data
