git/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-ingress
spec:
  type: ClusterIP
  ports:
  - name: http-gui
    port: 3000
    targetPort: 3000
