git/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: git-service
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.92.61
  ports:
  - name: ssh-git
    port: 3001
    protocol: TCP
    targetPort: 3001
